# laboratory_work_20

./: CMakeLists.txt  output.txt  task_1-2.c  task_1-2_4-7_test.c  task_11.c  task_3.c  task_4.c
task_10_/: task_10.c
task_9_/: task_9.c
thread_io/: test_thread_io.c  test_thread_io.h  thread_io.c  thread_io.h  vector.c  vector.h
